<resources>
    <string name="tc_app_name">Text Converter</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="nav_header_subtitle">A lightweight and handy toolkit for text converting.</string>
    <string name="nav_header_desc">Navigation bar</string>
    <string name="action_settings">Settings</string>
    <string name="input_source_text">Source text</string>
    <string name="replace_from">Replace from…</string>
    <string name="replace_to">to…</string>
    <string name="use_regex">Use Regular Expression</string>
    <string name="output">Output</string>
    <string name="generate">Generate</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="no_use_spaces">Use newline instead of spaces to concat strings</string>
    <string name="random_shuffle">Shuffle or sort strings</string>
    <string name="shuffle_hint">Input text here with newlines or spaces to divide strings</string>
    <string name="shuffle_instruction">Input strings below and use spaces or newlines to separate them.</string>
    <string name="shuffle">Shuffle</string>
    <string name="sort_by_dict">Sort</string>
    <string name="sort_by_number">Sort as numbers</string>
    <string name="string_replace">String Replacement</string>
    <string name="string_shuffle_sort">String Shuffle/Sort</string>
    <string name="i_know">I know</string>
    <string name="confirm">Confirm</string>
    <string name="regex_info">Regular Expression (Regex) is a powerful feature. To know more about regex, see our guidelines.\nYou can load custom or preset regex from the menu on the top right corner.</string>
    <string name="view_help">View guidelines</string>
    <string name="cleared">Cleared</string>
    <string name="undo">undo</string>
    <string name="caution">Notice</string>
    <string name="reverse_io">Copy output to input</string>
    <string name="clear_all">Clear all</string>
    <string name="search_next">Search next</string>
    <string name="input_search_hint">Input search target</string>
    <string name="search_result">Search results</string>
    <string name="search_previous">Search previous</string>
    <string name="text_search">Text Search</string>
    <string name="reset">Reset search results</string>
    <string name="settings">Settings</string>
    <string name="failed_loading_shortcut">Unable to load shortcuts!</string>
    <string name="share">Share</string>
    <string name="load_presets">Load regex</string>
    <string name="title_activity_view_help">View help</string>
    <string name="search_all">Search all</string>
    <string name="action_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_encrypt">AES Encrypt/Decrypt</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="uppercase_sensitive">Case sensitive</string>
    <string name="input_password">Password</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="password_visible">Make password visible</string>
    <string name="about">About</string>
    <string name="app_discription">A lightweight and handy toolkit for text converting.</string>
    <string name="error_loading_version">Error loading version</string>
    <string name="developer">Developer：TCreopargh</string>
    <string name="visit_my_website">View my website</string>
    <string name="update">Check updates</string>
    <string name="exception_occurred">Error:</string>
    <string name="key_empty">Password cannot be empty!</string>
    <string name="string_reverse">Reverse strings</string>
    <string name="add_spaces">Add indents</string>
    <string name="more_handy_function">Toolbox</string>
    <string name="more_function">More functions</string>
    <string name="add_numbers">Segment and label</string>
    <string name="format_java_code">Format Java code</string>
    <string name="custom_random">Custom random number</string>
    <string name="generate_md5">Generate MD5 sum</string>
    <string name="format_instruction">Input a text, in which all patterns like {a,b}(a and b both represents integer numbers) will be replaces by a randomly generated number more or equal than a and less or equal than b. Use \"{{\" in case you want a single \"{\" character.</string>
    <string name="to_base_64">Base64 Encode</string>
    <string name="from_base_64">Base64 Decode</string>
    <string name="read_file">Read content from file</string>
    <string name="write_file">Write content to file</string>
    <string name="reverse_substring">Reverse order</string>
    <string name="replace">Replace</string>
    <string name="to_morse_code">Morse code encode/decode</string>
    <string name="from_morse_code">Morse code decode</string>
    <string name="switch_cases">Toggle cases</string>
    <string name="format_json">Format JSON</string>
    <string name="char_count">Character count</string>
    <string name="set_salt">Set salt value</string>
    <string name="star">Rate my app</string>
    <string name="reset_options">Reset settings</string>
    <string name="tick">tick</string>
    <string name="set_monospace">Use monospace font</string>
    <string name="morse_lower">Morse code set output to lower case</string>
    <string name="multi_line">Automatic line feed</string>
    <string name="test">test</string>
    <string name="reverse_disc">Reverses the order of characters in the string</string>
    <string name="choose_option">Select a function</string>
    <string name="string_copy">String batch copy</string>
    <string name="string_copy_disc">Repeats a string for multiple times</string>
    <string name="switch_caps_disc">Sets the case of a text</string>
    <string name="add_numbers_disc">Adds a numeric label before each line</string>
    <string name="format_java_disc">Reformats Java source code to comply with Google Java Style</string>
    <string name="custom_random_disc">Generates random numbers with assigned format. Click for more information</string>
    <string name="generate_md5_disc">Generates the MD5 summary of a text</string>
    <string name="to_base64_disc">Converts a text to Base64 encoding</string>
    <string name="from_base64_disc">Converts Base64 encoding to its original text</string>
    <string name="morse_code_disc">Decodes if the input is a legal Morse Code. Otherwise it will encode</string>
    <string name="format_json_disc">Increases the readability of JSON</string>
    <string name="open_functions_menu">Open functions menu</string>
    <string name="text_random">Generate randomly-selected text</string>
    <string name="text_random_disc">Pick a randomly selected text. Batch generation supported.</string>
    <string name="markdown_preview">Markdown Preview</string>
    <string name="get_source_code_from_url">Get source code from URL</string>
    <string name="enter_edit_mode">Enter edit mode</string>
    <string name="edit_mode">Edit mode</string>
    <string name="redo">Redo</string>
    <string name="edit_text_here">Edit your text here</string>
    <string name="what_is_this">What is this?</string>
    <string name="title_activity_custom_regex">Manage Regular Expressions</string>
    <string name="input_title">Input title</string>
    <string name="cancel_zh">Cancel</string>
    <string name="regex_value">Regex value</string>
    <string name="title_hint">Title:</string>
    <string name="expression_hint">Regex value:</string>
    <string name="manage_regex">Manage regular expressions</string>
    <string name="val_hint">(Use\"$val\"to instead matched sequence)</string>
    <string name="val_dialog_hint">\nYou can use $val to let it be replaced by matched sequence. Use $$ in case you want a single $ character.\nView help for more $ statements.</string>
    <string name="do_check_clipboard">Check clipboard on app start</string>
    <string name="encoding">Encoding</string>
    <string name="select_programming_language">Select the programming language</string>
    <string name="reset_search_result">Reset search results</string>
    <string name="function_menu">Functions menu</string>
    <string name="copy_regex">Copy</string>
    <string name="_6">6</string>
    <string name="_12">12</string>
    <string name="start_code_point">Minimal codepoint</string>
    <string name="end_code_point">Maximal codepoint</string>
    <string name="min_length">Minimal length</string>
    <string name="max_length">Maximal length</string>
    <string name="_1">1</string>
    <string name="_cancel_zh">Cancel</string>
    <string name="share_content">I\'ve been using the \"Text Converter\" tool, try it now!\nGet it from this link: https://www.coolapk.com/apk/212564</string>
    <string name="no_responsible_apps">No app can response the request!</string>
    <string name="hex_dec_value">Hexadecimal number</string>
    <string name="e_mail">E-mail</string>
    <string name="IP_address">IP address</string>
    <string name="url">URL</string>
    <string name="integer_num">Integer number</string>
    <string name="regular_num">Regular number</string>
    <string name="html_label">HTML label</string>
    <string name="wikipedia_notice">Wikipedia annotation</string>
    <string name="code_comment">Code comment</string>
    <string name="chinese_character">Chinese characters</string>
    <string name="to_lower_case">Switch to lower case</string>
    <string name="to_upper_case">Switch to upper case</string>
    <string name="switch_up_low">Toggle cases</string>
    <string name="word_first_upper">Set the first letter of a word to upper case</string>
    <string name="sentence_first_upper">Set the first letter of a sentence to upper case</string>
</resources>