<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy_to_clipboard"
        android:title="@string/copy_to_clipboard" />
    <item
        android:id="@+id/action_read_file"
        android:title="@string/read_file" />
    <item
        android:id="@+id/action_write_file"
        android:title="@string/write_file" />
    <item
        android:id="@+id/action_reverse_io"
        android:title="@string/reverse_io" />
    <item
        android:id="@+id/load_presets"
        android:title="@string/load_presets" />
    <item
        android:id="@+id/get_string_from_url"
        android:title="@string/get_source_code_from_url" />
    <item
        android:id="@+id/edit_mode"
        android:title="@string/enter_edit_mode" />
    <item
        android:id="@+id/action_char_count"
        android:title="@string/char_count" />
    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all" />

</menu>
